# martijn_oef

./: CMakeLists.txt  README.md
include/: huizen.h  nummerslang.h  plus.h  sorteren.h  trap.h
src/: huizen.cpp  main.cpp  nummerslang.cpp  plus.cpp  sorteren.cpp  trap.cpp
test/: CMakeLists.txt  test.cpp
